# stockAI

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/routes/: portfolio.py  predictions.py  stocks.py
backend/core/: __init__.py  breeze_client.py  config.py
backend/models/: schemas.py
backend/services/: data_fetcher.py  feature_engineering.py  ml_models.py  portfolio_service.py  predictor.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/charts/: CandlestickChart.jsx  ChartContainer.jsx  MacdChart.jsx  RsiChart.jsx  VolumeChart.jsx  chartRegistry.js
frontend/src/components/layout/: Header.jsx  Sidebar.jsx
frontend/src/components/portfolio/: PortfolioDashboard.jsx  PositionTable.jsx  TradePanel.jsx
frontend/src/components/prediction/: IndicatorPanel.jsx  PredictionCard.jsx
frontend/src/components/stock/: QuoteBar.jsx  StockSearch.jsx
frontend/src/pages/: AnalysisPage.jsx  PortfolioPage.jsx
frontend/src/services/: api.js
frontend/src/store/: useStore.js
frontend/src/styles/: globals.css
